--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		]
 	},
 	"description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-	"main": "index.js",
+	"main": "main.js",
 	"author": "",
 	"license": "ISC"
 }
